2022-07-24 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor configure.ac
	  - improve --version output
	  - use pkg-config to get link flags
	* Fix typo in log message (closes: #129)
	* Update aide.conf.5 manual page
	  - fix backslash escaping (closes: #130)
	  - do not start line with ' (closes: #131)
	* Fix deep selective matches (closes: #132)

2022-07-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Change log level for some deprecations
	* Update manual pages

2022-07-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor code to scan file system
	* Use signal-safe write function in signal handler (closes: #100)
	* Fix error messsage on invalid rule prefix

2022-07-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix SIGBUS handling
	* Fix segfault in close_md function

2022-06-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fork child for hash calculation (closes: #124)

2022-06-17 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust some log messages
	* Update aide.conf.5 manual page
	* Fix compiler warnings and clean up code
	* Improve error message for unknown config options

2022-06-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add prefix option to directory include macros (closes: #112)

2022-06-15 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add `report_format` option (closes: #18)
	  - available formats: `plain`, `json`

2022-04-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix memory leak on errors during hash calculation (closes: #125)

2022-02-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix handling of duplicate database entries (closes: #122)

2022-02-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix compiler warnings and clean up code

2022-02-12 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Clean up #include statements

2022-01-19 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Precalculate buffer size in base64 functions (CVE-2021-45417),
	  thanks to David Bouman for reporting this issue
