@@ -1,3 +1,6 @@
+2022-07-30 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Check for gcrypt if mhash is not available
+
 2022-07-24 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Refactor configure.ac
 	  - improve --version output
